<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/similar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/similar_movie_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:padding="16dp"
                android:text="@string/similar_movies"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/similar_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/similar_movie_bar"
                android:visibility="invisible" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cast_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cast_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="sans-serif-condensed"
                android:padding="16dp"
                android:text="@string/cast"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cast_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="?android:selectableItemBackground"
                android:fontFamily="sans-serif-condensed"
                android:padding="16dp"
                android:text="@string/more"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:visibility="invisible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cast_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cast_bar"
                android:visibility="invisible" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/crew_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/crew_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:padding="16dp"
                android:text="@string/crew"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/crew_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="?android:selectableItemBackground"
                android:fontFamily="sans-serif-condensed"
                android:padding="16dp"
                android:text="@string/more"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:visibility="invisible" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/crew_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/crew_bar"
                android:visibility="invisible" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>